feat: add suggestions and include separate multistage Dockerfile
See https://snyk.io/blog/10-best-practices-to-containerize-nodejs-web-applications-with-docker/

--- a/Dockerfile.mulitstage
+++ b/Dockerfile.mulitstage
@@ -1,3 +1,9 @@
+FROM node:latest AS build
+
+WORKDIR /usr/src/app
+COPY package*.json /usr/src/app/
+RUN npm ci --only=production
+
 # See: docker inspect node:lts-alpine | jq -r ".[0].RepoDigests[0]" 
 FROM node:lts-alpine@sha256:2c405ed42fc0fd6aacbe5730042640450e5ec030bada7617beac88f742b6997b
 
@@ -6,10 +12,9 @@ RUN apk add dumb-init
 ENV NODE_ENV production
 EXPOSE 3000
 
-WORKDIR /usr/src/app
-COPY --chown=node:node . .
-RUN npm ci --only=production
-
 USER node
-# invoke the Node process directly
+WORKDIR /usr/src/app
+COPY --chown=node:node --from=build /usr/src/app/node_modules /usr/src/app/node_modules
+COPY --chown=node:node . /usr/src/app
+
 CMD ["dumb-init", "node", "server.js"]
