fix: wrong interpolation

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,10 +121,10 @@ jobs:
                 name: Set up --cache-from and --cache-to
                 command: |
                   CACHE_FROM="type=registry,ref=${DOCKER_REGISTRY}/${DOCKER_USER}/<< parameters.repo >>:<< parameters.tag >>"
-                  echo 'export DOCKER_BUILDX_CACHE_FROM="${CACHE_FROM}"' >> $BASH_ENV
+                  echo "export DOCKER_BUILDX_CACHE_FROM='${CACHE_FROM}'" >> $BASH_ENV
 
                   CACHE_TO="inline"
-                  echo 'export DOCKER_BUILDX_CACHE_TO="${CACHE_TO}"' >> $BASH_ENV
+                  echo "export DOCKER_BUILDX_CACHE_TO='${CACHE_TO}'" >> $BASH_ENV
       - when:
           condition:
             equal: [ local, << parameters.cache-type >> ]
@@ -133,10 +133,10 @@ jobs:
                 name: Set up --cache-from and --cache-to
                 command: |
                   CACHE_FROM="type=local,src=<< parameters.local-cache-path >>"
-                  echo 'export DOCKER_BUILDX_CACHE_FROM="${CACHE_FROM}"' >> $BASH_ENV
+                  echo "export DOCKER_BUILDX_CACHE_FROM='${CACHE_FROM}'" >> $BASH_ENV
 
                   CACHE_TO="type=local,mode=<< parameters.cache-mode >>,dest=<< parameters.local-cache-path >>"
-                  echo 'export DOCKER_BUILDX_CACHE_TO="${CACHE_TO}"' >> $BASH_ENV
+                  echo "export DOCKER_BUILDX_CACHE_TO='${CACHE_TO}'" >> $BASH_ENV
       - when:
           condition:
             equal: [ registry, << parameters.cache-type >> ]
@@ -145,15 +145,10 @@ jobs:
                 name: Set up --cache-from and --cache-to
                 command: |
                   CACHE_FROM="type=registry,ref="${DOCKER_REGISTRY}/${DOCKER_USER}/<< parameters.repo >>:<< parameters.registry-cache-tag >>"
-                  echo 'export DOCKER_BUILDX_CACHE_FROM="${CACHE_FROM}"' >> $BASH_ENV
+                  echo "export DOCKER_BUILDX_CACHE_FROM='${CACHE_FROM}'" >> $BASH_ENV
 
                   CACHE_TO="type=registry,mode=<< parameters.cache-mode >>,ref="${DOCKER_REGISTRY}/${DOCKER_USER}/<< parameters.repo >>:<< parameters.registry-cache-tag >>"
-                  echo 'export DOCKER_BUILDX_CACHE_TO="${CACHE_TO}"' >> $BASH_ENV
-      - run:
-          name: Debug cache options
-          command: |
-            printenv DOCKER_BUILDX_CACHE_FROM
-            printenv DOCKER_BUILDX_CACHE_TO
+                  echo "export DOCKER_BUILDX_CACHE_TO='${CACHE_TO}'" >> $BASH_ENV
       - run:
           name: Build image via Docker Buildx
           command: |
