--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,7 +183,7 @@ workflows:
       - push:
           name: snyk-node-via-inline-cache
           repo: snyk-node
-          tag: inline-cache
+          tag: latest
           dockerfile: Dockerfile
           build-context: "."
           cache-type: inline
