chore: use same base image in multistage build

--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -1,4 +1,4 @@
-FROM node:latest AS build
+FROM node:lts-alpine@sha256:2c405ed42fc0fd6aacbe5730042640450e5ec030bada7617beac88f742b6997b AS build
 
 WORKDIR /usr/src/app
 COPY package*.json /usr/src/app/
